# MoonBase

./: .bazelignore  .bazelrc  .build_pal  .env.example  .gitignore  .scalafmt.conf  BUILD  BUILD.bazel  BUILD_PAL.md  Cargo.toml  Dockerfile.ci  GOLF_IMPROVEMENTS.md  LICENSE  MCP_OAUTH_README.md  METRICS_API.md  MODULE.bazel  OTEL_2.md  PR_REVIEW.md  README.md  ROOMS.md  STEPS.md  WORKSPACE  clippy.toml  dependencies.yaml  docker-compose.observability.yml  go.mod  go.sum  gomod.patch  maven_install.json  pom.xml  renovate.json  requirements.in  requirements_darwin_lock.txt  requirements_linux_lock.txt  rules_jvm_external++maven+maven_install.json  rustfmt.toml
.circleci/: config.yml
.clwb/: .bazelproject
.github/docker/: Dockerfile.ci
.github/scripts/: update-homebrew-formula.py
.github/workflows/: auto-tag-impact-mcp.yml  bazel.yml  bazel_main.yml  branch.yml  branch_cheap.yml  branch_expensive.yml  build-ci-image.yml  codeql.yml  publish.yml  release-impact-mcp.yml  release-microgpt.yml  release-rust-tool.yml  release-wordchains-ios.yml  release-wordchains.yml  semgrep.yml
.ijwb/: .bazelproject
bazel/: BUILD.bazel  apple.MODULE.bazel  cc.MODULE.bazel  cc_toolchain_config.bzl  extensions.bzl  go.MODULE.bazel  http_archives.bzl  java.MODULE.bazel  js.MODULE.bazel  oci.MODULE.bazel  proto.MODULE.bazel  python.MODULE.bazel  rust.MODULE.bazel  scala.MODULE.bazel  smithy.MODULE.bazel  tools.MODULE.bazel
bazel/3p/: BUILD.bazel  mongoose.BUILD  raylib.BUILD  sdl3.BUILD  sfml.BUILD
bazel/extensions/: extensions.bzl  mongoose.bzl  raylib.bzl  sdl3.bzl  sfml.bzl
bazel/format/: BUILD.bazel
bazel/intellij/: clion.bazelproject  universe.bazelproject
bazel/patches/: BUILD.bazel  grpc_bazel9_native_rules.patch  grpc_extra_deps.patch  mongoose.patch  opentelemetry-cpp-curl-linkstatic.patch  rules_scala_33.patch
bazel/rules/: BUILD.bazel  cc.bzl  java.bzl  java_image_test.yaml  nullaway.bzl  oci.bzl
bazel/toolchains/: BUILD.bazel
c/string_splitter/: BUILD.bazel  README.md  string_splitter_test.cc
cpp/cards/: BUILD.bazel  README.md  card.cc  card.h  card_mapper.cc  card_mapper.h  card_mapper_test.cc  card_proto_mapper.cc  card_proto_mapper.h  card_proto_mapper_test.cc  card_test.cc  dealer.cc  dealer.h  dealer_test.cc
cpp/cards/golf/: BUILD.bazel  doc_db_game_store.cc  doc_db_game_store.h  escapist_game_store.cc  escapist_game_store.h  game_manager.cc  game_manager.h  game_manager_test.cc  game_state.cc  game_state.h  game_state_test.cc  game_store.cc  game_store.h  golf.cc  golf.h  golf_test.cc  in_memory_game_store.cc  in_memory_game_store.h  player.cc  player.h  player_test.cc
cpp/doc_db_client/: BUILD.bazel  README.md  doc_db_client.cc  doc_db_client.h  doc_db_client_test.cc  doc_db_demo.cc
cpp/escapist_client/: BUILD.bazel  escapist_client.cc  escapist_client.h  escapist_client_test.cc  escapist_demo.cc
cpp/example_cc_go/: BUILD.bazel  example_cc_go.cc  example_cc_go.h  example_cc_go_test.cc
cpp/example_meerkat/: BUILD.bazel  README.md  example_meerkat_integration_test.cc  example_meerkat_test.cc  example_meerkat_unit_test.cc  main.cc
cpp/example_mongoose/: BUILD.bazel  Main.cc
cpp/example_raylib/: BUILD.bazel  README.md  main.cc
cpp/example_service/: BUILD.bazel  README.md  example_service.cc  example_service.h  example_service_test.cc  main.cc
cpp/futility/: README.md
cpp/glfw_example/: BUILD.bazel  main.cc
cpp/golf_grpc/: README.md
cpp/golf_grpc_service/: BUILD.bazel  README.md  golf_grpc_service.cc  golf_grpc_service.h  golf_grpc_service_test.cc  main.cc
cpp/golf_service/: BUILD.bazel  Main.cc  README.md  api.cc  api.h  game_state_mapper.cc  game_state_mapper.h  game_state_mapper_test.cc  golf_lib.cc  golf_lib.h  golf_lib_test.cc  handlers.cc  handlers.h  router.cc  router.h
cpp/image_core/: image_core.h
cpp/kevn/: BUILD.bazel  README.md  kevn_service.cc  kevn_service.h  kevn_service_test.cc  main.cc
cpp/lakitu/: README.md  lakitu.cc  lakitu.h
cpp/mandelbrot/: BUILD.bazel  README.md  app_state.cc  app_state.h  color.cc  color.h  mandelbrot.cc
cpp/meerkat/: BUILD.bazel  README.md  http_client.cc  http_client.h  http_client_test.cc  meerkat.cc  meerkat.h  meerkat_integration_test.cc  meerkat_test.cc  metrics_manager.cc  metrics_manager.h  metrics_manager_test.cc  metrics_server_test.cc
cpp/png_hello/: BUILD.bazel  png_hello.cc
cpp/png_plusplus/: BUILD.bazel  png_plusplus.h  png_plusplus_test.cc
cpp/portrait/: BUILD.bazel  Main.cc  PORTRAIT_TODO.md  base64.cc  base64.h  base64_test.cc  tracer_service.cc  tracer_service.h  tracer_service_test.cc  types.cc  types.h  types_test.cc
cpp/raylib_example/: BUILD.bazel  hello_raylib.cc
cpp/sfml_example/: BUILD.bazel
cpp/so_leet/: BUILD.bazel  README.md  so_leet.cc  so_leet.h  so_leet_test.cc
cpp/tracy/: BUILD.bazel  Main.cc  README.md  tracy.cc  tracy.h  tracy_test.cc
cpp/trill/: BUILD.bazel  README.md  trill.cc  trill.h
cpp/tubing/: BUILD.bazel  tubing.cc
deploy/: README.md
deploy/api.muchq.com/: Caddyfile  README.md  compose.yaml  deploy.sh  local_deploy.sh
deploy/consolidated/: Caddyfile  Caddyfile.local  LOCAL.md  README.md  compose.yaml  daily-restart.sh  deploy.sh  docker-compose.observability.yml  initialize_host.sh  local.sh  local_deploy.sh
deploy/r3dr.net/: CONSOLIDATE.md  README.md  deploy.sh
docs/: BUILD_AND_IDE.md  DEPLOYED_SERVICES_HARDENING_PLAN.md  IMPACT_MCP.md  IMPORTING.md  ONLINE_LEARNING_OPTIONS.md  SESSION_TOKEN_IMPLEMENTATION.md
docs/microgpt/: CHAT_AGENT.md  TENSOR_ENGINE.md
domains/ai/: README.md
go/cards/: card.go  (+3 more)
import-dir/: micronaut-cli.yml  pom.xml
import-quartz-dir/: README.md
intellij/: clion.bazelproject  universe.bazelproject
o11y/: otel-collector.yml  prometheus.yml
oci/: BUILD.bazel  README.md
scripts/: cargo-build  diagnostics.sh  diff-build  format-all  format-bazel  format-bazel-check  format-cc  format-cc-check  format-java  format-scala  format-scala-check  run-mcp-oauth-demo.sh  update_deps.sh
smithy/: BUILD.bazel  FEATURE_GAP_ANALYSIS.md  README.md
static_content/: BUILD.bazel
tools/: junit.bzl
(+1935 files in other folders)
