[workspace]
resolver = "2"

members = [
    "rust/cards",
    "rust/doc_db",
    "rust/imagine",
    "rust/mithril",
    "rust/posterize",
    "rust/server_pal",
    "rust/wordchains",
    "protos/example_service",
    "protos/doc_db",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"


[workspace.dependencies]
axum = "0.8.8"
base64 = "0.22.1"
base64ct = { version = "1.8.2", features = ["alloc"] }
clap = { version = "4.5.54", features = ["cargo"] }
doc_db_proto = { path = "protos/doc_db" }
dotenv = "0.15.0"
futures = "0.3.31"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
imagine = { path = "rust/imagine" }
log = "0.4.29"
mongodb = "3.4.1"
prost = { version = "0.14.3" }
prost-types = { version = "0.14.3", default-features = false }
protoc-gen-tonic = "0.5.0"
protoc-gen-prost = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
server_pal = { path = "rust/server_pal" }
sha2 = "0.11.0-rc.3"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "fast-rng", "serde"]}
wordchains = { path = "rust/wordchains" }
