[workspace]
resolver = "2"

members = [
    "domains/ai/apps/impact_mcp",
    "domains/ai/apps/microgpt_cli",
    "domains/ai/apis/microgpt_serve",
    "domains/ai/libs/microgpt",
    "domains/platform/apis/doc_db",
    "domains/graphics/libs/imagine_rust",
    "domains/games/apis/mithril",
    "domains/graphics/apis/posterize",
    "domains/platform/libs/server_pal",
    "domains/games/libs/wordchains",
    "domains/games/apps/wordchains",
    "domains/platform/protos/example_grpc",
    "domains/platform/protos/doc_db",
    "domains/games/apis/motif_query",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"


[workspace.dependencies]
axum = "0.8.8"
base64 = "0.22.1"
candle-core = "0.9.2"
candle-nn = "0.9.2"
base64ct = { version = "1.8.3", features = ["alloc"] }
clap = { version = "4.5.60", features = ["cargo"] }
doc_db_proto = { path = "domains/platform/protos/doc_db" }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
imagine = { path = "domains/graphics/libs/imagine_rust" }
log = "0.4.29"
mongodb = "3.5.1"
prost = { version = "0.14.3" }
prost-types = { version = "0.14.3", default-features = false }
half = "2.7.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider", "query"] }
rustls = { version = "0.23.36", default-features = false, features = ["std", "tls12", "ring", "logging"] }
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
server_pal = { path = "domains/platform/libs/server_pal" }
sha2 = "0.11.0-rc.5"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "signal"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
protoc-gen-prost = "0.5.0"
protoc-gen-tonic = "0.5.0"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["full"] }
http-body-util = "0.1.3"
tempfile = "3.25.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "fast-rng", "serde"]}
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0.0"
rmcp = { version = "0.17.0", features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
schemars = "1.2.1"
serde_yaml_ng = "0.10.0"
microgpt = { path = "domains/ai/libs/microgpt" }
rustyline = "17.0.2"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
tower_governor = "0.8.0"
wordchains = { path = "domains/games/libs/wordchains" }
datafusion = "52"
arrow = { version = "58", features = ["json"] }
parquet = { version = "58", features = ["arrow"] }
