load(":cc_toolchain_config.bzl", "cc_toolchain_config_darwin", "cc_toolchain_config_k8")


package(default_visibility = ["//visibility:public"])

cc_toolchain_suite(
    name = "gcc13-suite",
    toolchains = {
        "darwin": ":darwin_toolchain",
        "k8": "k8_toolchain",
    },
)

filegroup(name = "empty")

cc_toolchain(
    name = "darwin_toolchain",
    toolchain_identifier = "darwin-toolchain",
    toolchain_config = ":cc_config_darwin",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain(
    name = "k8_toolchain",
    toolchain_identifier = "k8-toolchain",
    toolchain_config = ":cc_config_k8",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

cc_toolchain_config_darwin(name = "cc_config_darwin")
cc_toolchain_config_k8(name = "cc_config_k8")
