bazel_dep(name = "apple_support", version = "1.24.5")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "libpng", version = "1.6.50.bcr.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "opentelemetry-cpp", version = "1.22.0")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

mongoose_ext = use_extension("//bazel/extensions:mongoose.bzl", "mongoose")
use_repo(mongoose_ext, "mongoose_cc")

sdl3_ext = use_extension("//bazel/extensions:sdl3.bzl", "sdl3")
use_repo(sdl3_ext, "sdl3")

raylib_ext = use_extension("//bazel/extensions:raylib.bzl", "raylib")
use_repo(raylib_ext, "raylib")

sfml_ext = use_extension("//bazel/extensions:sfml.bzl", "sfml")
use_repo(sfml_ext, "sfml")
