bazel_dep(name = "rules_cc", version = "0.2.21")
bazel_dep(name = "abseil-cpp", version = "20260107.1", repo_name = "com_google_absl")
bazel_dep(name = "check", version = "0.15.2.bcr.2")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "libpng", version = "1.6.54")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "opentelemetry-cpp", version = "1.27.0")
bazel_dep(name = "curl", version = "8.12.0.bcr.1")

sdl3_ext = use_extension("//bazel/extensions:sdl3.bzl", "sdl3")
use_repo(sdl3_ext, "sdl3")

raylib_ext = use_extension("//bazel/extensions:raylib.bzl", "raylib")
use_repo(raylib_ext, "raylib")
