bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "contrib_rules_jvm", version = "0.32.0")

single_version_override(
    module_name = "rules_android",
    version = "0.7.1",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

JETTY_VERSION = "11.0.23"

LOGBACK_VERSION = "1.5.6"

NULLAWAY_VERSION = "0.13.1"

ERROR_PRONE_VERSION = "2.46.0"

maven.install(
    artifacts = [
        "ch.qos.logback:logback-classic:%s" % LOGBACK_VERSION,
        "ch.qos.logback:logback-core:%s" % LOGBACK_VERSION,
        "com.fasterxml.jackson.core:jackson-annotations",
        "com.fasterxml.jackson.core:jackson-core",
        "com.fasterxml.jackson.core:jackson-databind",
        "com.google.errorprone:error_prone_core:%s" % ERROR_PRONE_VERSION,
        "com.uber.nullaway:nullaway:%s" % NULLAWAY_VERSION,
        "com.zaxxer:HikariCP:7.0.2",
        "io.github.tors42:chariot:0.2.7",
        "com.h2database:h2:2.4.240",
        "org.postgresql:postgresql:42.7.10",
        "com.fasterxml.jackson.datatype:jackson-datatype-guava",
        "com.fasterxml.jackson.datatype:jackson-datatype-jdk8",
        "com.fasterxml.jackson.datatype:jackson-datatype-jsr310",
        "com.fasterxml.jackson.module:jackson-module-scala_2.13",
        "com.google.guava:guava:33.5.0-jre",
        "io.micronaut:micronaut-inject",
        "io.micronaut:micronaut-inject-java",
        "io.micronaut.validation:micronaut-validation",
        "io.micronaut.validation:micronaut-validation-processor",
        "io.micronaut:micronaut-http-client",
        "io.micronaut:micronaut-http-server-netty",
        "io.micronaut:micronaut-jackson-databind",
        "io.micronaut:micronaut-runtime",
        "io.micronaut.jaxrs:micronaut-jaxrs-processor",
        "io.micronaut.jaxrs:micronaut-jaxrs-server",
        "io.netty:netty-common",
        "io.netty:netty-codec",
        "io.netty:netty-handler",
        "io.netty:netty-transport",
        "io.sentry:sentry-logback:8.33.0",
        "jakarta.annotation:jakarta.annotation-api:3.0.0",
        "junit:junit:4.13.2",
        "org.assertj:assertj-core:3.27.7",
        "org.eclipse.jetty:jetty-server:%s" % JETTY_VERSION,
        "org.eclipse.jetty.websocket:websocket-jetty-server:%s" % JETTY_VERSION,
        "org.jspecify:jspecify:1.0.0",
        "org.slf4j:slf4j-api:2.0.17",
    ],
    boms = [
        "io.netty:netty-bom:4.2.9.Final",
        "io.micronaut:micronaut-core-bom:4.10.12",
        "io.micronaut.jaxrs:micronaut-jaxrs-bom:4.10.0",
        "io.micronaut.validation:micronaut-validation-bom:4.12.0",
        "com.fasterxml.jackson:jackson-bom:2.21.0",
    ],
    generate_compat_repositories = True,
    known_contributing_modules = [
        "moon-base",
        "protobuf",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
