bazel_dep(name = "rules_python", version = "1.8.1")

# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     configure_coverage_tool = True,
#     python_version = "3.12",
# )
#
# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
# pip.parse(
#     hub_name = "pypi",
#     python_version = "3.12",
#     requirements_darwin = "//:requirements_darwin_lock.txt",
#     requirements_linux = "//:requirements_linux_lock.txt",
# )
# use_repo(pip, "pypi")
